<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChallengeAccepted</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_challenge_list">ChallengeListActivity</string>
    <string name="no_item">No challenge to display</string>
    <string name="title">Sorry!</string>
    <string name="error">There is an error getting data!</string>
    <string name="title_activity_login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_starter_text">"Don't have an account? Please sign up here."</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="email_field">E-mail</string>
    <string name="base">http://myterandildeneme.byethost14.com/challenge_en.json</string>
    <string name="signup_error_message">Please make sure enter username, password and e-mail!</string>
    <string name="signup_error">oops!! something gone wrong.</string>
    <string name="login_error_message">Please make sure enter username and password!</string>
    <string name="logout">Logout</string>
    <string name="challange_destoy">Give up from the challenge!</string>
    <string name="backtolist">List</string>
    <string name="replacechallenge">Replace with my challenge</string>
    <string name="backtomychallenge">Stay with my challenge</string>
    <string name="tolist">Navigate to list</string>
    <string name="title_activity_my">MyActivity</string>

</resources>
